[gd_scene load_steps=5 format=3 uid="uid://cnpljc0qq3yeq"]

[ext_resource type="Theme" uid="uid://bif1vn82s31vk" path="res://scenes/GUI.tres" id="1_fjygc"]
[ext_resource type="Script" path="res://scripts/enemy_collection.gd" id="1_fwkw7"]
[ext_resource type="FontFile" uid="uid://dvxbp285xmtig" path="res://assets/fonts/Knights Quest.ttf" id="1_m8dsd"]
[ext_resource type="PackedScene" uid="uid://dryyulleo7ct8" path="res://scenes/custom_tooltip.tscn" id="2_nfoxf"]

[node name="EnemyCollection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fwkw7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.952941, 0.611765, 0.0705882, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_m8dsd")
theme_override_font_sizes/font_size = 58
text = "Enemy Information"
horizontal_alignment = 1

[node name="FilterButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -410.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = 73.0
grow_horizontal = 0
theme_override_constants/separation = 10
alignment = 1

[node name="AllButton" type="Button" parent="FilterButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme = ExtResource("1_fjygc")
text = "All"

[node name="NormalButton" type="Button" parent="FilterButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme = ExtResource("1_fjygc")
text = "Normal"

[node name="EliteButton" type="Button" parent="FilterButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme = ExtResource("1_fjygc")
text = "Elite"

[node name="BossButton" type="Button" parent="FilterButtons"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme = ExtResource("1_fjygc")
text = "Boss"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -260.0
offset_right = 600.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 8

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 660.0
offset_right = 160.0
offset_bottom = 710.0
theme = ExtResource("1_fjygc")
text = "Back"

[node name="CustomTooltip" parent="." instance=ExtResource("2_nfoxf")]
layout_mode = 1
